--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -65,6 +65,7 @@ $svgmargin: 18px;
                         flex-direction: row;
                         align-items: center;
                         justify-content: center;
+                        margin-bottom: 0;
 
                         &:first-child {
                             width: 40%;
